force-app/main/default/objects/School__c/fields/Last_Child_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Child_Date__c</fullName>
    <description>populates from batch only</description>
    <label>Last Child Date</label>
    <type>DateTime</type>
</CustomField>