force-app/main/default/objects/School__c/fields/Last_Student_joined__c.field-meta.xml
<CustomField>
    <fullName>Last_Student_joined__c</fullName>
    <label>Last Student joined</label>
    <type>DateTime</type>
</CustomField>